Tagline in footer

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,8 @@
 
 title: Axur Engineering blog
 short_title: Engineering blog
-author: Axur. Digital Risk Protection
+author: Axur
+tagline: Experiências digitais mais seguras
 website:
   link: www.axur.com
   url: https://axur.com/
