--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,10 @@ plugins:
 
 google_analytics: UA-167519399-1
 
+kramdown:
+  syntax_highlighter: rouge
+  input: GFM
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
