--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,8 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://engineering.axur.com" # the base hostname & protocol for your site, e.g. http://example.com
 linkedin_username: Axur
-facebook_username: OneAxur
-twitter_username: AxurOne
+facebook_username: AxurBrasil
+twitter_username: AxurBrasil
 youtube_username: AxurBrasil
 
 # Build settings
